# tozo

./: Dockerfile  LICENSE  README.rst  hypercorn.toml
.github/workflows/: audit.yml  cd.yml  ci.yml
backend/: .gitignore  development.env  pyproject.toml  testing.env
backend/src/backend/: run.py
backend/src/backend/blueprints/: control.py  members.py  serving.py  sessions.py  todos.py
backend/src/backend/lib/: api_error.py  email.py
backend/src/backend/migrations/: 0.py  1.py  data.py
backend/src/backend/models/: member.py  todo.py
backend/src/backend/templates/: email.html  forgotten_password.html  password_changed.html  welcome.html
backend/tests/: conftest.py  test_rate_limits.py
backend/tests/blueprints/: test_control.py  test_members.py  test_sessions.py  test_todos.py
backend/tests/lib/: test_email.py
backend/tests/models/: test_member.py  test_todo.py
frontend/: package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.test.tsx  App.tsx  AuthContext.tsx  Router.tsx  ThemeProvider.tsx  ToastContext.tsx  index.tsx  models.ts  queries.ts  query.ts  service-worker.ts  serviceWorkerRegistration.ts  setupTests.ts  utils.tsx
frontend/src/components/: AccountMenu.tsx  BookIntro.tsx  CheckboxField.tsx  DateField.tsx  EmailField.tsx  FormActions.tsx  LazyPasswordWithStrengthField.tsx  PasswordField.tsx  PasswordWithStrengthField.tsx  RequireAuth.tsx  ScrollToTop.tsx  TextField.tsx  Title.tsx  Toasts.tsx  Todo.tsx  TodoForm.tsx  TopBar.tsx  TotpField.tsx
frontend/src/pages/: ChangePassword.tsx  ConfirmEmail.tsx  CreateTodo.tsx  EditTodo.tsx  Error.tsx  ForgottenPassword.tsx  Login.tsx  MFA.tsx  Register.tsx  ResetPassword.tsx  Todos.tsx
infrastructure/: .gitignore  README  ansible.cfg  aws.tf  aws_cluster.tf  aws_network.tf  certs.tf  dns.tf  github.tf  main.tf  secrets.auto.tfvars.vault  terraform.tfstate.vault
